<resources>
    <string name="app_name">mobile_wallet_final</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alke_wallet">Alke Wallet</string>
    <string name="slogan">El lugar más seguro para tu dinero</string>
    <string name="crea_cuenta">Crear cuenta nueva</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="background_login">background_login</string>
    <string name="registrarse_y">Registrarse y</string>
    <string name="empezar_a_transferir">empezar a transferir</string>
    <string name="nombreLabel">Nombre</string>
    <string name="ingresar_nombre">Ingresar nombre</string>
    <string name="apellidoLabel">Apellido</string>
    <string name="ingresar_apellido">Ingresar apellido</string>
    <string name="ingresar_pass">Ingresar contraseña</string>
    <string name="reingresar_contrase_a">Reingresar contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="inicioStringProfile">Inicio</string>
    <string name="hola_amanda">Hola, Amanda</string>
    <string name="balance_total">Balance Total</string>
    <string name="random_money">$124.57</string>
    <string name="bell_icon_badge">bell_icon_badge</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="logea_y_empeza_a">Logea y empeza a</string>
    <string name="transferir">transferir!</string>
    <string name="emailLabel">Email</string>
    <string name="passlLabel">Contraseña</string>
    <string name="ingresar_tu_email">Ingresar tu email</string>
    <string name="ingresar_tu_pass">Ingresar tu contraseña</string>
    <string name="login_button">Login</string>
    <string name="crea_nueva_cuenta">Crear una nueva cuenta</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="transaction_amount_with_sign">%1$s</string>
</resources>