<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ui.view.fragments.LoginSignupPageFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:fontFamily="@font/jua"
        android:text="@string/alke_wallet"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:drawableTopCompat="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline_new"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_18_sp_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/slogan"
        app:layout_constraintEnd_toEndOf="@id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="21dp" />

    <Button
        android:id="@+id/crea_cuenta"
        style="@style/boton_azul_alke"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/crea_cuenta"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <Button
        android:id="@+id/tiene_cuenta"
        style="@style/boton_transparente"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/ya_tienes_una_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@id/guideline4" />


</androidx.constraintlayout.widget.ConstraintLayout>